# gamedev101

./: .cursorrules  CMakeLists.txt
games/snake/: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt
libs/na_error/: CMakeLists.txt  error.cpp  na_error.cpp  result.cpp
libs/na_error/na_error/: macros.hpp
libs/na_gl/: CMakeLists.txt  na_gl.cpp  wrapper.cpp
libs/na_gl_render_common/: CMakeLists.txt  na_gl_render_common.cpp  shader.cpp
libs/na_glad/: CMakeLists.txt
libs/na_glad/include/glad/: glad.h
libs/na_glad/src/: glad.c
libs/na_glfwapp/: CMakeLists.txt  application.cpp  na_glfwapp.cpp  runner.cpp
templates/: CMakeLists.library.txt
